mytoyk8s/pod-a-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod-a
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pod-a
  template:
    metadata:
      labels:
        app: pod-a
    spec:
      containers:
      - name: pod-a
        image: busybox:1.28
        command: ["sleep", "3600"]
